Coupled with interface List instead of tight coupling with LinkedList.